# vhd-forensic

./: .gitleaks.toml  Cargo.toml  README.md  clippy.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml  release.yml
core/: Cargo.toml
core/src/: dynamic.rs  error.rs  footer.rs  lib.rs  read.rs  vfs.rs
core/tests/: corpus.rs  qemu_differential.rs  real_images.rs
core/tests/data/: README.md  fixed.vhd  minimal.vhd  original-size-mismatch.vhd
corpus/: fetch.sh
docs/: PRD.md  corpus-validation.md  implementation-notes.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-two-crate-core-forensic-split.md  0002-analyzer-parses-footer-raw.md  0003-crate-naming-and-import-path.md  0004-vfs-imagesource-behind-optional-feature.md  0005-forbid-unsafe-panic-free-posture.md  0006-format-scope-fixed-dynamic-read-only.md  0007-currentsize-footer-offset-48-oracle-validated.md  0008-msrv-floor-1-85.md
forensic/: Cargo.toml
forensic/src/: integrity.rs  lib.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_open/: fixed.vhd  minimal.vhd
fuzz/fuzz_targets/: fuzz_audit.rs  fuzz_open.rs
supply-chain/: config.toml
vhd/: Cargo.toml
vhd/src/: dynamic.rs  error.rs  footer.rs  lib.rs
