[workspace]
resolver = "2"
members = ["vhd"]

[workspace.dependencies]
thiserror = "2"
tempfile  = "3"

[workspace.lints.clippy]
pedantic                 = { level = "warn", priority = -1 }
module_name_repetitions  = "allow"
must_use_candidate       = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_sign_loss           = "allow"
