[workspace]
resolver = "2"
members = ["core", "forensic"]

# Single source of truth for fields shared by every member (DRY): bump version /
# MSRV / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/vhd-forensic"

[workspace.dependencies]
thiserror = "2"
tempfile  = "3"

[workspace.lints.clippy]
pedantic                 = { level = "warn", priority = -1 }
module_name_repetitions  = "allow"
must_use_candidate       = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_sign_loss           = "allow"
