[package]
name         = "vhd-core"
# Test fixtures (real dfvfs VHDs, corpus, fuzz) are for the repo, not consumers.
exclude      = ["tests/data/", "corpus/", "fuzz/"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description  = "Pure-Rust read-only legacy VHD (Virtual PC) disk image reader"
license.workspace = true
repository.workspace = true
homepage     = "https://github.com/SecurityRonin/vhd-forensic"
documentation = "https://docs.rs/vhd"
authors      = ["Albert Hui"]
keywords     = ["forensics", "vhd", "disk-image", "windows", "container"]
categories   = ["parser-implementations", "filesystem"]

[lib]
name = "vhd"
path = "src/lib.rs"

[features]
# Expose test helper constructors for use in downstream crate tests.
test-helpers = []
# forensic-vfs ImageSource contract (optional): present a decoded VHD as a
# read-only positioned-read byte source. Behind the `vfs` feature (ADR 0004).
vfs = ["dep:forensic-vfs"]

[dependencies]
thiserror = { workspace = true }
forensic-vfs = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
