[package]
name         = "vhd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description  = "Pure-Rust read-only legacy VHD (Virtual PC) disk image reader"
license.workspace = true
repository.workspace = true
homepage     = "https://github.com/SecurityRonin/vhd"
documentation = "https://docs.rs/vhd"
authors      = ["Albert Hui"]
keywords     = ["forensics", "vhd", "disk-image", "windows", "container"]
categories   = ["parser-implementations", "filesystem"]

[features]
# Expose test helper constructors for use in downstream crate tests.
test-helpers = []

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
